--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,72 @@
-alembic==1.14.0
+agate==1.9.1
 annotated-types==0.7.0
-anyio==4.6.2.post1
-backoff==2.2.1
+atpublic==5.0
+attrs==24.2.0
+babel==2.16.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
-coloredlogs==14.0
-croniter==3.0.4
-dagster==1.9.1
-dagster-graphql==1.9.1
-dagster-pipes==1.9.1
-dagster-webserver==1.9.1
-docstring_parser==0.16
-filelock==3.16.1
-fsspec==2024.10.0
+colorama==0.4.6
+daff==1.3.46
+dbt-adapters==1.7.0
+dbt-common==1.10.0
+dbt-core==1.8.8
+dbt-extractor==0.5.1
+dbt-postgres==1.8.2
+dbt-semantic-interfaces==0.5.1
+deepdiff==7.0.1
 geopandas==1.0.1
-gql==3.5.0
-graphene==3.4.3
-graphql-core==3.2.5
-graphql-relay==3.2.0
-grpcio==1.67.1
-grpcio-health-checking==1.62.3
-h11==0.14.0
-httptools==0.6.4
-humanfriendly==10.0
 ibis==3.3.0
+ibis-framework==9.5.0
 idna==3.10
+importlib-metadata==6.11.0
+isodate==0.6.1
 Jinja2==3.1.4
-Mako==1.3.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+leather==0.4.0
+Logbook==1.5.3
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mashumaro==3.14
 mdurl==0.1.2
-multidict==6.1.0
+minimal-snowplow-tracker==0.0.2
+more-itertools==10.5.0
+msgpack==1.1.0
+networkx==3.4.2
 numpy==2.1.3
+ordered-set==4.1.0
 packaging==24.2
 pandas==2.2.3
-polars==1.13.1
-propcache==0.2.0
+parsedatetime==2.6
+parsy==2.1
+pathspec==0.12.1
 protobuf==4.25.5
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+pyarrow==17.0.0
+pyarrow-hotfix==0.6
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
 pyogrio==0.10.0
 pyproj==3.7.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+python-slugify==8.0.4
+pytimeparse==1.1.8
 pytz==2024.2
 PyYAML==6.0.2
+referencing==0.35.1
 requests==2.32.3
-requests-toolbelt==1.0.0
 rich==13.9.4
-setuptools==75.5.0
+rpds-py==0.21.0
 shapely==2.0.6
 six==1.16.0
-sniffio==1.3.1
-SQLAlchemy==2.0.36
-starlette==0.41.2
-structlog==24.4.0
-tabulate==0.9.0
-tomli==2.1.0
-toposort==1.10
-tqdm==4.67.0
+sqlglot==25.20.2
+sqlparse==0.5.2
+text-unidecode==1.3
+toolz==0.12.1
 typing_extensions==4.12.2
 tzdata==2024.2
-universal_pathlib==0.2.5
 urllib3==2.2.3
-uvicorn==0.32.0
-uvloop==0.21.0
-watchdog==5.0.3
-watchfiles==0.24.0
-websockets==14.1
-yarl==1.17.1
+zipp==3.21.0
