add generic api scripts: purge, download, checksum

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,11 @@
 
 /node_modules
 
-# Ignore python environment
+# Ignore python components
 .venv
+__pycache__/
+*.pyc
+*.pyo
 
 # Ignore data
 *.zip
