--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     container_name: aedg_explorer_db
-    image: postgres:16
+    image: postgis/postgis:16-3.5
     ports:
       - "127.0.0.1:5433:5432" # Maps host port 5433 to container port 5432
     volumes:
