--- a/test/fixtures/monthly_generations.yml
+++ b/test/fixtures/monthly_generations.yml
@@ -4,8 +4,16 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  grid_id: 1
+  net_generation_mwh: 111.1
+  fuel_type: 'NG'
+  year: 2021
+  month: 11
+
+two: 
+  grid_id: 2
+  net_generation_mwh: 222.2
+  fuel_type: 'NG'
+  year: 2022
+  month: 2
