--- a/test/fixtures/regional_corporations.yml
+++ b/test/fixtures/regional_corporations.yml
@@ -4,8 +4,14 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+one:
+  fips_code: '0000001'
+  name: 'Regional Corporation One'
+  land_area: 1234
+  water_area: 5678
 #
-two: {}
-# column: value
+two:
+  fips_code: '0000002'
+  name: 'Regional Corporation Two'
+  land_area: 1234
+  water_area: 5678
