--- a/test/fixtures/aedg_imports.yml
+++ b/test/fixtures/aedg_imports.yml
@@ -4,8 +4,12 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+one: 
+  aedg_id: 1
+  importable_type: 'Grid'
+  importable_id: 1
 #
-two: {}
-# column: value
+two: 
+  aedg_id: 2
+  importable_type: 'Grid'
+  importable_id: 1
