--- a/test/fixtures/communities.yml
+++ b/test/fixtures/communities.yml
@@ -1,19 +1,32 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  fips_code: 1
-  name: MyString
+  fips_code: '0000001'
+  name: 'Test Community One'
   latitude: 9.99
   longitude: 9.99
-  ansi_code: 1
-  community_id: 
-  global_id: 
+  ansi_code: '001'
+  borough_fips_code: '00001'
+  dcra_code: '11111111-1111-1111-1111-111111111111'
+  pce_eligible: true
+  pce_active: true
+  slug: 'test-community-one'
+  location: 'POINT(-149.1 64.1)'
+  grid_id: 1
+  regional_corporation_fips_code: '0000001'
+
 
 two:
-  fips_code: 1
-  name: MyString
+  fips_code: '0000002'
+  name: 'Test Community Two'
   latitude: 9.99
   longitude: 9.99
-  ansi_code: 1
-  community_id: 
-  global_id: 
+  ansi_code: '002'
+  borough_fips_code: '00002'
+  dcra_code: '22222222-2222-2222-2222-222222222222'
+  pce_eligible: false
+  pce_active: false
+  slug: 'test-community-two'
+  location: 'POINT(-149.1 64.1)'
+  grid_id: 2
+  regional_corporation_fips_code: '0000002'
