--- a/test/fixtures/senate_districts.yml
+++ b/test/fixtures/senate_districts.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  district: MyString
+  district: 'A'
   as_of_date: 2025-03-18
-  boundary: 
 
 two:
-  district: MyString
+  district: 'B'
   as_of_date: 2025-03-18
-  boundary: 
