--- a/test/fixtures/transportations.yml
+++ b/test/fixtures/transportations.yml
@@ -4,8 +4,26 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+one:
+  community_fips_code: '0000001'
+  airport: true
+  harbor_dock: false
+  state_ferry: true
+  cargo_barge: false
+  road_connection: true
+  coastal: true
+  road_or_ferry: false
+  description: 'This is a description for transportation for community 1234'
+  as_of_date: 2025-03-10
 #
-two: {}
-# column: value
+two:
+  community_fips_code: '0000002'
+  airport: true
+  harbor_dock: false
+  state_ferry: true
+  cargo_barge: false
+  road_connection: true
+  coastal: true
+  road_or_ferry: false
+  description: 'This is a description for transportation for community 5678'
+  as_of_date: 2025-03-18
