Cleanup fixture files, directly reference grids instead of adding grid_id, remove AedgImport fixture data as it wasn't doing anything (need to figure out how to test)

--- a/test/fixtures/datasets.yml
+++ b/test/fixtures/datasets.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: "Dataset One"
-  slug: "dataset-one"
+  name: 'Dataset One'
+  slug: 'dataset-one'
   data: {}
   metadatum: one
 
 two:
-  name: "Dataset Two"
-  slug: "dataset-two"
+  name: 'Dataset Two'
+  slug: 'dataset-two'
   data: {}
   metadatum: two
