--- a/test/fixtures/yearly_generations.yml
+++ b/test/fixtures/yearly_generations.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  grid_id: 1
+  grid: one
   net_generation_mwh: 5000
-  fuel_type: "NG"
+  fuel_type: 'NG'
   year: 2020
 
 two:
-  grid_id: 2
+  grid: two
   net_generation_mwh: 1500
-  fuel_type: "DFO"
+  fuel_type: 'DFO'
   year: 2021
