Switch to postgis image
Signed-off-by: Will Fisher <whfisher@alaska.edu>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres
+        image: postgis
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
