--- a/test/fixtures/datasets.yml
+++ b/test/fixtures/datasets.yml
@@ -1,27 +1,43 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: 'Dataset One'
-  slug: 'dataset-one'
+csv_dataset:
+  name: 'CSV Dataset'
   metadatum: one
   data:
-    path: "dataset-one.csv"
-    type: "table"
-    title: "Test Dataset"
-    format: "CSV"
+    path: 'test/fixtures/files/test.csv'
+    type: 'table'
+    title: 'CSV Dataset'
+    format: 'CSV'
     topics:
-      - "Test Topic"
+      - 'Test Topic'
     schema:
       fields:
-        - name: "name"
-          type: "string"
+        - name: 'name'
+          type: 'string'
           unit: null
           nullable: false
-          description: "Test name"
-        - name: "number"
-          type: "number"
-          unit: "#"
+          description: 'Test name'
+        - name: 'number'
+          type: 'number'
+          unit: '#'
           nullable: true
-          description: "Test number"
-    publicationDate: "2025-03-07"
-  
+          description: 'Test number'
+
+geojson_dataset:
+  name: 'GeoJSON Dataset'
+  metadatum: one
+  data:
+    path: 'test/fixtures/files/test.geojson'
+    format: 'GeoJSON'
+    title: 'Geo Test'
+    schema:
+      fields:
+        - name: 'id'
+          type: 'integer'
+          description: 'Unique ID'
+        - name: 'name'
+          type: 'string'
+          description: 'Location name'
+        - name: 'location'
+          type: 'geojson'
+          description: 'Location coordinates'
