--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.20",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.8",
     "datatables.net-bs5": "^2.2.2",
