--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,7 +89,7 @@ jobs:
           DATABASE_URL: postgis://postgres:postgres@localhost:5432
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
           # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:setup db:test:prepare test
+        run: bin/rails db:drop db:setup test
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
