Fix rubocop, add inverse_of to community/community_grids, exclude too many lines offense in import.rake

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -16,6 +16,8 @@ Metrics/AbcSize:
 # AllowedMethods: refine
 Metrics/BlockLength:
   Max: 154
+  Exclude:
+    - 'lib/tasks/import.rake'
 
 # Offense count: 1
 # Configuration parameters: AllowedMethods, AllowedPatterns.
