--- a/config/data/partners.yml
+++ b/config/data/partners.yml
@@ -1,69 +1,90 @@
 state_partners:
   - name: Alaska Department of Education & Early Development
     acronym: DEED
+    url: https://education.alaska.gov
 
   - name: Alaska Division of Community and Regional Affairs
     acronym: DCRA
+    url: https://www.commerce.alaska.gov/web/dcra
 
   - name: Alaska Department of Labor and Workforce Development
     acronym: DOLWD
+    url: https://labor.alaska.gov
 
   - name: Alaska Energy Authority
     acronym: AEA
-    url: https://www.akenergyauthority.org/
+    url: https://www.akenergyauthority.org
     logo: 'AEA-logo.png'
 
   - name: Alaska Housing Finance Corporation
     acronym: AHFC
+    url: https://www.ahfc.us
+
+  - name: State of Alaska Department of Natural Resources
+    acronym: DNR
+    url: https://dnr.alaska.gov
 
   - name: Regulatory Commission of Alaska
     acronym: RCA
+    url: https://rca.alaska.gov/RCAWeb/home.aspx
   
   - name: State of Alaska
+    url: https://www.alaska.gov
     
 federal_partners:
   - name: American Community Survey
     acronym: ACS
+    url: https://www.census.gov/programs-surveys/acs
 
   - name: Federal Energy Regulatory Commission
     acronym: FERC
+    url: https://www.ferc.gov
     logo: 'FERC-logo.png'
 
   - name: United States Census Bureau
     acronym: CENSUS
-    url: https://www.census.gov/
+    url: https://www.census.gov
     logo: 'census-logo.png'
 
   - name: U.S. Bureau of Labor Statistics
     acronym: BLS
-    url: https://www.bls.gov/
+    url: https://www.bls.gov
     logo: 'BLS-logo.png'
+
+  - name: U.S. Department of Commerce
+    acronym: DOC
+    url: https://www.commerce.gov
 
   - name: U.S. Energy Information Administration
     acronym: EIA
+    url: https://www.eia.gov/
     logo: 'eia-logo.jpg'
 
   - name: U.S. Geological Survey
     acronym: USGS
+    url: https://www.usgs.gov
     logo: 'usgs_logo.gif'
 
 industry_partners:
   - name: Alaska Center for Energy and Power
     acronym: ACEP
-    url: https://acep.uaf.edu/ 
+    url: https://acep.uaf.edu
     logo: 'ACEP-Logo.jpg'
+
   - name: Berkeley National Lab
-    url: https://www.lbl.gov/
+    acronym: LBL
+    url: https://www.lbl.gov
   
   - name: Catalyst Cooperative
+    url: https://catalyst.coop
 
   - name: Institute of Social and Economic Research
     acronym: ISER
-    url: https://iser.uaa.alaska.edu/
+    url: https://iseralaska.org
     logo: 'ISER-logo.png'
   
-  - name: DOWL Engineering
-    acronym: DOWL
+  - name: DOWL
+    url: https://www.dowl.com
     logo: 'DOWL-logo.jpg'
 
   
