--- a/test/fixtures/reporting_entities.yml
+++ b/test/fixtures/reporting_entities.yml
@@ -5,12 +5,12 @@
 # below each fixture, per the syntax in the comments below
 #
 one:
-  utility_name: 'Test Utility One'
+  name: 'Test Utility One'
   year: 2020
   grid: one
 
 two:
-  utility_name: 'Test Utility Two'
+  name: 'Test Utility Two'
   year: 2021
   grid: two
 
