Add missing partner images, add Academic partner category

--- a/config/data/partners.yml
+++ b/config/data/partners.yml
@@ -52,7 +52,7 @@ state_partners:
   - name: Regulatory Commission of Alaska
     acronym: RCA
     url: https://rca.alaska.gov/RCAWeb/home.aspx
-    logo: 'rca-logo.png'
+    logo: 'rca-logo.jpeg'
   
   - name: State of Alaska
     url: https://www.alaska.gov
