--- a/config/data/partners.yml
+++ b/config/data/partners.yml
@@ -1,100 +1,100 @@
 industry_partners:
-  - name: Catalyst Cooperative
-    url: https://catalyst.coop
+  - name: 'Catalyst Cooperative'
+    url: 'https://catalyst.coop'
     logo: 'catalyst-logo.png'
   
-  - name: DOWL
-    url: https://www.dowl.com
+  - name: 'DOWL'
+    url: 'https://www.dowl.com'
     logo: 'dowl-logo.jpg'
 
 academic_partners:
-  - name: Alaska Center for Energy and Power
-    acronym: ACEP
-    url: https://acep.uaf.edu
+  - name: 'Alaska Center for Energy and Power'
+    acronym: 'ACEP'
+    url: 'https://acep.uaf.edu'
     logo: 'acep-logo.jpg'
 
-  - name: Institute of Social and Economic Research
-    acronym: ISER
-    url: https://iseralaska.org
+  - name: 'Institute of Social and Economic Research'
+    acronym: 'ISER'
+    url: 'https://iseralaska.org'
     logo: 'iser-logo.png'
 
-  - name: Lawrence Berkeley National Lab
-    acronym: LBNL
-    url: https://www.lbl.gov
+  - name: 'Lawrence Berkeley National Lab'
+    acronym: 'LBNL'
+    url: 'https://www.lbl.gov'
     logo: 'lbnl-logo.png'
 
 state_partners:
-  - name: Alaska Department of Education & Early Development
-    acronym: DEED
-    url: https://education.alaska.gov
+  - name: 'Alaska Department of Education & Early Development'
+    acronym: 'DEED'
+    url: 'https://education.alaska.gov'
     logo: 'deed-logo.png'
 
-  - name: Alaska Department of Labor and Workforce Development
-    acronym: DOLWD
-    url: https://labor.alaska.gov
+  - name: 'Alaska Department of Labor and Workforce Development'
+    acronym: 'DOLWD'
+    url: 'https://labor.alaska.gov'
     logo: 'dowld-logo.png'
 
-  - name: Alaska Division of Community and Regional Affairs
-    acronym: DCRA
-    url: https://www.commerce.alaska.gov/web/dcra
+  - name: 'Alaska Division of Community and Regional Affairs'
+    acronym: 'DCRA'
+    url: 'https://www.commerce.alaska.gov/web/dcra'
     logo: 'dcra-logo.png'
 
-  - name: Alaska Energy Authority
-    acronym: AEA
-    url: https://www.akenergyauthority.org
+  - name: 'Alaska Energy Authority'
+    acronym: 'AEA'
+    url: 'https://www.akenergyauthority.org'
     logo: 'aea-logo.png'
 
-  - name: Alaska Housing Finance Corporation
-    acronym: AHFC
-    url: https://www.ahfc.us
+  - name: 'Alaska Housing Finance Corporation'
+    acronym: 'AHFC'
+    url: 'https://www.ahfc.us'
     logo: 'ahfc-logo.png'
 
-  - name: Regulatory Commission of Alaska
-    acronym: RCA
-    url: https://rca.alaska.gov/RCAWeb/home.aspx
+  - name: 'Regulatory Commission of Alaska'
+    acronym: 'RCA'
+    url: 'https://rca.alaska.gov/RCAWeb/home.aspx'
     logo: 'rca-logo.jpeg'
   
-  - name: State of Alaska
-    url: https://www.alaska.gov
+  - name: 'State of Alaska'
+    url: 'https://www.alaska.gov'
     logo: 'soa-logo.png'
   
-  - name: State of Alaska Department of Natural Resources
-    acronym: DNR
-    url: https://dnr.alaska.gov
+  - name: 'State of Alaska Department of Natural Resources'
+    acronym: 'DNR'
+    url: 'https://dnr.alaska.gov'
     logo: 'dnr-logo.png'
     
 federal_partners:
-  - name: American Community Survey
-    acronym: ACS
-    url: https://www.census.gov/programs-surveys/acs
+  - name: 'American Community Survey'
+    acronym: 'ACS'
+    url: 'https://www.census.gov/programs-surveys/acs'
     logo: 'acs-logo.png'
 
-  - name: Federal Energy Regulatory Commission
-    acronym: FERC
-    url: https://www.ferc.gov
+  - name: 'Federal Energy Regulatory Commission'
+    acronym: 'FERC'
+    url: 'https://www.ferc.gov'
     logo: 'ferc-logo.png'
 
-  - name: U.S. Bureau of Labor Statistics
-    acronym: BLS
-    url: https://www.bls.gov
+  - name: 'U.S. Bureau of Labor Statistics'
+    acronym: 'BLS'
+    url: 'https://www.bls.gov'
     logo: 'bls-logo.png'
 
-  - name: U.S. Department of Commerce
-    acronym: DOC
-    url: https://www.commerce.gov
+  - name: 'U.S. Department of Commerce'
+    acronym: 'DOC'
+    url: 'https://www.commerce.gov'
     logo: 'doc-logo.jpeg'
 
-  - name: U.S. Energy Information Administration
-    acronym: EIA
-    url: https://www.eia.gov/
+  - name: 'U.S. Energy Information Administration'
+    acronym: 'EIA'
+    url: 'https://www.eia.gov/'
     logo: 'eia-logo.jpg'
 
-  - name: U.S. Geological Survey
-    acronym: USGS
-    url: https://www.usgs.gov
+  - name: 'U.S. Geological Survey'
+    acronym: 'USGS'
+    url: 'https://www.usgs.gov'
     logo: 'usgs_logo.gif'
 
-  - name: United States Census Bureau
-    acronym: CENSUS
-    url: https://www.census.gov
+  - name: 'United States Census Bureau'
+    acronym: 'CENSUS'
+    url: 'https://www.census.gov'
     logo: 'census-logo.png'
