AEDG-450 Fix links

--- a/config/data/aedg_timeline.yml
+++ b/config/data/aedg_timeline.yml
@@ -13,4 +13,4 @@ aedg_timeline:
 
   - title: 'AEDG Version 1.0'
     date: '2013'
-    description: "The Alaska Energy Data Gateway (AEDG) was created by UAA’s Institute of Social and Economic Research (ISER) and UAF’s Alaska Center for Energy and Power (ACEP) to showcase energy and socioeconomic data for Alaska."
+    description: "The Alaska Energy Data Gateway (AEDG) was orignally developed by UAA’s Institute of Social and Economic Research (ISER) to showcase energy and socioeconomic data for Alaska."
