--- a/test/fixtures/communities_legislative_districts.yml
+++ b/test/fixtures/communities_legislative_districts.yml
@@ -1,13 +1,5 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  community_fips_code: '0000001'
-  house_district: one
-  senate_district: one
-  election_region: 1
+# one: {}
 
-two:
-  community_fips_code: '0000002'
-  house_district: two
-  senate_district: two
-  election_region: 2
+# two: {}
